photoTree/tree/static/tree/CSS/chart.css
*, body {
  -webkit-font-smoothing: antialiased;
}
* {
  box-sizing: border-box;
}

/* The parent element */
.css-chart {
  /* The height, which is initially defined in the HTML */
  /*height: var(--widget-size);*/
  height: 100%;

  /* A little breathing room should there be others items around the chart */
  /* Remove any padding so we have as much space to work with inside the element */
  padding: 0;
  position: relative;

  margin: 0;

  /* The chart width, as defined in the HTML */
  /*width: var(--widget-size);*/
  width: 100%;

  border: 4px solid black;
  border-top: none;
  
  overflow: scroll;

  zoom: 1;
}

.tree-container {
  height: auto;
  width: 100%;
  position: relative;

  border: 4px solid black;
  overflow: scroll;
  margin: 0;
}

/* The unordered list holding the data points, no list styling and no spacing */
.line-chart {
  list-style: none;
  margin-top: 50px;
  padding: 0;
  /*transform: scale(1);
  -webkit-backface-visibility:hidden;
  backface-visibility:hidden;*/
}

/* Each point on the chart, each a circle with a light border */
.data-point {
  background-color: white;
  border: 5px solid #7ab7e6;
  border-radius: 50%;
  position: absolute;
  height: 3rem;
  width: 3rem;

  /* The data points have a radius of 8px and the line segment has a width of 3px, 
    so we split the difference to center the data points on the line segment origins */
  bottom: calc(var(--y) - 24px);
  left: calc(var(--x) - 23px);
}

.data-point:hover {
  transition-duration: 0.25s;
  transform: scale(1.2);
}

.data-point-hidden {
  background-color: white;
  border: 5px solid tan;
  border-radius: 50%;
  position: absolute;
  height: 3rem;
  width: 3rem;

  /* The data points have a radius of 8px and the line segment has a width of 3px, 
    so we split the difference to center the data points on the line segment origins */
  bottom: calc(var(--y) - 24px);
  left: calc(var(--x) - 23px);
}

.data-point-hidden:hover {
  transition-duration: 0.25s;
  transform: scale(1.2);
}

.expand-tree {
  background-color: white;
  border-radius: 50%;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;

  display:flex;
  justify-content: center;
  align-items: center;

  bottom: calc(var(--y) - 40px);
  left: calc(var(--x) - 12px);
}



.hover-point {
  background-color: white;
  border: 2px solid lightblue;
  position: absolute;

  bottom: calc(var(--y) - 21.5px);
  left: calc(var(--x) - 24.5px);
}

.data-button {
  color: blue;
}

.data-button:active {
  color: black;
  background-color: black;
}
.data-button:visted {
  color: yellow;
  background-color: yellow;
}

.node-container {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.node-image {
  height: 6rem;
  width: 6rem;
  margin: 4px;

  border-radius: 50px;
}

.nodeBox-button {
  background-color: white;
  border: 4px solid #7ab7e6; /*was light blue*/
  border-radius: 65px;
  margin: 7px;
}

.nodeBox-button:hover {
  transition-duration: 0.25s;
  transform: scale(1.05);
}

.tree-image {
  width: 50px;
}

.footer-node {
  display: flex;
  border: 2px solid black;

  border-radius: 50px;
}

.confirm-box {
  display: flex;
  height: 8rem;
  width: 20%;

  justify-content: space-around;
  align-items: center;

  border: 2px solid black;
  margin: .5em;
}

/*testing hover*/
.hide {
  display: none;
}

.info-box:hover + .hide {
  display: block;
  color: red;
}

/* CSS */
.button-34 {
  display: flex;
  margin: 5px;

  /*background: #5E5DF0;*/
  background: aliceblue;
  border-radius: 999px;
  box-shadow: #5e5df0 0 10px 20px -10px;
  box-sizing: border-box;
  color: black;
  cursor: pointer;
  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
    "Noto Sans", sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  opacity: 1;
  outline: 0 solid transparent;
  padding: 8px 18px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
  word-break: break-word;
  border: 0;
}

.button-34:hover {
  transition-duration: 0.2s;
  background-color: rgb(214, 213, 213);
}

body {
  background-color: #eef7fe;
}

.center-menu {
  padding: 10px;
  width: 100%;
  border-radius: 7px;

  /*background: #9dbef1;*/
  background: #FAE5A1;
  border: 4px solid black;
  
}

.menu-pics-container {
  display: flex;
  justify-content: space-around;
  margin-top: 10px;
}

.menu-pic {
  display: flex;
  border-radius: 20px;

  width: 100px;
  height: 100px;
}

.menu-button-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 5px;
  margin-top: 15px;
}

.hover-menu {
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  background: white;
  
  border-radius: 10px;

  border: 2px solid rgb(65, 65, 65);

  box-shadow: #002e5d 0 10px 20px -10px;
}

.page-header {
  width: 100%;
  /*height: 100px;*/
  height: 4rem;
  background-color: #002e5d; /*rgb(61, 177, 173)*/
  font-family: Arial;
  padding: 3px;
  text-align: center;
  justify-content: space-around;
  align-items: center !important;
  /*ADDED*/
  display: flex;

  position: relative;
  top:0;
}

.footer-box {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: auto;
  position: relative;

  background-color: #002e5d;
}

.header-link {
  color: white;
  text-decoration: none;
}
.header-link:hover {
  color: lightgray;
}

.x-button {
  display:block;
  height: 30px;
  width: 30px;
  border-radius: 100%;
  border: 2.5px solid black;
}
.x-button:hover {
  transition-duration: 0.2s;
  background-color: darkgray;
}

.zoom-btn {
  display: flex;
  margin: 5px;

  /*background: #5E5DF0;*/
  background: rgb(230, 222, 222);
  border-radius: 999px;
  box-shadow: #002e5d 0 10px 20px -10px;
  box-sizing: border-box;
  color: black;
  cursor: pointer;
  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
    "Noto Sans", sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  opacity: 1;
  outline: 0 solid transparent;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
  word-break: break-word;
  border: 2px solid black;
}
.zoom-btn:hover {
  transition-duration: 0.2s;
  background-color: rgb(185, 176, 176);
}

.tutorial-box {
  display: flex;
  width: 75%;
  height: auto;
  background-color: lightblue;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: fixed;
  padding: 5px;

  border: 3px solid black;

  flex-direction: column;
}

.side-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: .25em;
  margin-top: 0;
  margin-bottom: 0;
  width: 20%;
  border:
  3px solid green;

}

/*Smart Phone sized devices*/
@media screen and (min-width: 0px) and (max-width: 450px) {
  .side-container {
    /*width: 20%;*/
    width: 300px;
    overflow: visible;
  }

  .center-menu {
    height: 100%;
    overflow: auto;
    background:green;
  }

  .menu-pics-container {
    justify-content: space-between;
  }

  .menu-button-container {
    justify-content: center;
    width: 100%;
    overflow: auto;
  }

  .button-34 {
    width: auto;
  }

  h2 {
    font-size: smaller;
    font-weight: bold;
  }

  .page-header {
    height: 3rem;
  }
}

/*Tablet sized  devices*/
@media screen and (min-width: 450px) and (max-width: 769px) {
  .side-container {
    /*width: 20%;*/
    width: 300px;
    overflow: visible;
  }

  .center-menu {
    height: 100%;
    overflow: auto;
    background: red;
  }

  .menu-pics-container {
    justify-content: space-between;
  }

  .menu-button-container {
    justify-content: center;
    width: 100%;
    overflow: auto;
  }

  .button-34 {
    width: auto;
  }

  .page-header {
    word-break: break-word;
  }

  h2 {
    font-size: 20px;
    font-weight: bold;
  }
}


/*Anything laptop screen size*/
@media screen and (min-width: 769px) and (max-width: 1200px) {
  .side-container {
    /*width: 20%;*/
    width: 300px;
    overflow: visible;
  }

  .center-menu {
    height: 100%;
    overflow: auto;
    background: blue;
  }

  .menu-pics-container {
    justify-content: space-between;
  }

  .menu-button-container {
    justify-content: center;
    width: 100%;
    overflow: auto;
  }

  .button-34 {
    width: auto;
  }

  h2 {
    font-weight: bold;
  }


}

/*Getting to large monitor screen size*/
@media screen and (min-width: 1200px) {
  .side-container {
    width: 20%;
  }

  .menu-pics-container {
    justify-content: space-around;
  }

  .menu-button-container {
    overflow: auto;
  }

  .center-menu {
    background: tan;
    overflow: auto;
  }

  h2 {
    font-weight: bold;
  }
}


/*///////////////////////////////////*/


/* The side navigation menu */
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  right: 0;
  background-color: tan; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
  transition: margin-left .5s;
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

